# rob534

./: .gitignore  README.md  better_code.py  follower.json  job.slurm  leader.json  libero_eval.sh  main.py  pyproject.toml  robot_control.py  usefull_code.py
lerobot/: training-act.ipynb
src/analyzer/config/: settings.py
src/policies/pi05/infer/: lerobot_eval.py
src/rob534/: job.slurm  main.py
