[project]
name = "rob534"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.78.0",
    "lerobot[feetech]>=0.4.4",
    "transformers>=5.3.0",
]

[tool.uv.sources]
lerobot = { git = "https://github.com/huggingface/lerobot.git" }
